monitoring/alertmanager/4.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: alertmanager
  name: alertmanager
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alertmanager
  template:
    metadata:
      labels:
        app: alertmanager
    spec:
      containers:
      - name: alertmanager
        image: prom/alertmanager:latest
        imagePullPolicy: IfNotPresent
        args:
        - --config.file=/etc/alertmanager/alertmanager.yml
        - --storage.path=/var/lib/alertmanager/
        - --data.retention=120h
        - --web.route-prefix=/
        - --web.listen-address=0.0.0.0:9093
        - --web.external-url=https://alertmanager.github.icu
        - --cluster.peer-timeout=15s
        - --cluster.reconnect-interval=10s
        - --cluster.listen-address=0.0.0.0:9094
        - --cluster.reconnect-timeout=5m
        ports:
        - containerPort: 9093
          name: web
          protocol: TCP
        - containerPort: 9094
          name: notify
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 1Gi
        securityContext:
          privileged: true
          runAsUser: 0
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /-/healthy
            port: 9093
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 3
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /-/ready
            port: 9093
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 3
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
        - name: alertmanager-data
          mountPath: /var/lib/alertmanager
          subPath: alertmanager/data
        - name: alertmanager-config
          mountPath: /etc/alertmanager
      - name: configmap-reload
        image: jimmidyson/configmap-reload:v0.9.0
        imagePullPolicy: IfNotPresent
        args:
          - --volume-dir=/etc/alertmanager
          - --webhook-url=http://localhost:9093/-/reload
        volumeMounts:
          - name: localtime
            mountPath: /etc/localtime
          - name: alertmanager-config
            mountPath: /etc/alertmanager
      volumes:
      - name: localtime
        hostPath:
          path: /etc/localtime
          type: ""
      - name: alertmanager-config
        configMap:
          name: alertmanager-config
          defaultMode: 420
      - name: alertmanager-data
        persistentVolumeClaim:
          claimName: alertmanager-data
