monitoring/alertmanager/3.service-clusterip.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: monitoring
  labels:
    app: alertmanager
spec:
  sessionAffinity: ClientIP
  selector:
    app: alertmanager
  type: ClusterIP
  ports:
    - name: web
      protocol: TCP
      port: 9093
      targetPort: 9093
    - name: notify
      protocol: TCP
      port: 9094
      targetPort: 9094
