monitoring/alertmanager/3.service-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
  labels:
    app: alertmanager
spec:
  ingressClassName: nginx
  rules:
  - host: alertmanager.github.icu
    http:
      paths:
      - backend:
          service:
            name: alertmanager
            port:
              number: 9093
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - alertmanager.github.icu
    secretName: github-tls
