monitoring/alertmanager/3.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: monitoring
  labels:
    app: alertmanager
spec:
  sessionAffinity: ClientIP
  selector:
    app: alertmanager
  type: ClusterIP
  ports:
    - name: web
      protocol: TCP
      port: 9093
      targetPort: 9093
    - name: notify
      protocol: TCP
      port: 9094
      targetPort: 9094
    - name: configmap-reload
      protocol: TCP
      port: 9533
      targetPort: 9533
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
  labels:
    app: alertmanager
spec:
  ingressClassName: nginx
  rules:
  - host: alertmanager.github.icu
    http:
      paths:
      - backend:
          service:
            name: alertmanager
            port:
              number: 9093
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - alertmanager.github.icu
    secretName: github-tls
